--- a/0_dev/page-templates/0_zoomcast-template.html
+++ b/0_dev/page-templates/0_zoomcast-template.html
@@ -107,7 +107,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with .” Hosted by . <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/.html">https://undiscipliningvc.org/html/zoomcasts/.html</a>.</p><!-- Change -->
+						<p>“Zoomcast with .” Hosted by . <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/.html">https://undiscipliningvc.org/html/zoomcasts/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
