--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -115,7 +115,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Margaret Linley, dev. “Unsettling Victorian Literature.” Elaine Freedgood, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/about/unsettling_victorian.html">https://undiscipliningvc.org/html/about/unsettling_victorian.html</a>.</p>
+						<p>Margaret Linley, dev. “Unsettling Victorian Literature.” Elaine Freedgood, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/unsettling_victorian.html">https://undiscipliningvc.org/html/syllabi/unsettling_victorian.html</a>.</p>
 					</section>
 			</main>
 			
