--- a/0_dev/page-templates/0_lesson-plan-template-caribbean.html
+++ b/0_dev/page-templates/0_lesson-plan-template-caribbean.html
@@ -185,7 +185,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>, lesson plan dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/.html">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
+						<p>, lesson plan dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/.html">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
