--- a/0_dev/page-templates/0_syllabus-template.html
+++ b/0_dev/page-templates/0_syllabus-template.html
@@ -113,7 +113,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>, dev. “.” , peer rev.; , syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/about/.html">https://undiscipliningvc.org/html/about/.html</a>.</p><!-- Change -->
+						<p>, dev. “.” , peer rev.; , syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/.html">https://undiscipliningvc.org/html/about/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
