--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -72,7 +72,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>“Bibliography.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/about/bibliography.html">https://undiscipliningvc.org/html/about/bibliography.html</a>.</p>
+						<p>“Bibliography.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/bibliography.html">https://undiscipliningvc.org/html/about/bibliography.html</a>.</p>
 					</section>
 			</main>
 			
