--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -68,7 +68,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>“Values and Practices.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/about/values_practices.html">https://undiscipliningvc.org/html/about/values_practices.html</a>.</p>
+						<p>“Values and Practices.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/values_practices.html">https://undiscipliningvc.org/html/about/values_practices.html</a>.</p>
 					</section>
 			</main>
 			
