--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -105,7 +105,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
+						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
 					</section>
 			</main>
 			
