--- a/html/lesson_plans/african_ethiopianism.html
+++ b/html/lesson_plans/african_ethiopianism.html
@@ -152,7 +152,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html">https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html</a>.</p>
+						<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/ethiopianism.html">https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html</a>.</p>
 					</section>
 			</main>
 			
