--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -115,7 +115,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>Adrian S. Wisnicki, Kira Braham, Heidi Kaufman, Indu Ohri, and Breanna Simpson. “Mary Seacole and the Caribbean.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_caribbean_introduction.html">https://undiscipliningvc.org/html/lesson_plans/seacole_caribbean_introduction.html</a>.</p>
+						<p>Adrian S. Wisnicki, Kira Braham, Heidi Kaufman, Indu Ohri, and Breanna Simpson. “Mary Seacole and the Caribbean.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_caribbean_introduction.html">https://undiscipliningvc.org/html/lesson_plans/seacole_caribbean_introduction.html</a>.</p>
 					</section>
 			</main>
 			
