--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -256,7 +256,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Indu Ohri, lesson plan dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
+						<p>Indu Ohri, lesson plan dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
 					</section>
 			</main>
 			
