--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -257,7 +257,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Heidi Kaufman, lesson plan dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html</a>.</p>
+						<p>Heidi Kaufman, lesson plan dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_autobiographical_writing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html</a>.</p>
 					</section>
 			</main>
 			
