--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -117,7 +117,7 @@
 
 				<section aria-labelledby="citation">
 					<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-					<p>“Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html">https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html</a>.</p>
+					<p>“Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/hayward-reeder-brice.html">https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html</a>.</p>
 				</section>
 			</main>
 			
