--- a/sitemap.html
+++ b/sitemap.html
@@ -124,7 +124,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>“Site Map.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/sitemap.html">https://undiscipliningvc.org/sitemap.html</a>.</p>
+						<p>“Site Map.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/sitemap.html">https://undiscipliningvc.org/sitemap.html</a>.</p>
 					</section>
 			</main>
 			
