--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Decentering Britishness</h2>
-          	<img loading="" style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market scene with sellers seated before baskets, and many individuals in bright white clothing milling about." title="Anonymous. Jubilee Market, Kingston, Jamaica. ca. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain. Image courtesy of Monvisions."/>
+          	<img loading="" style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market with sellers seated before baskets, and many individuals in white clothing milling about." title="Anonymous. Jubilee Market, Kingston, Jamaica. ca. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain. Image courtesy of Monvisions."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -220,7 +220,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Kira Braham, lesson plan dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/decentering_britishness.html">https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html</a>.</p>
+						<p>Kira Braham, lesson plan dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_decentering_britishness.html">https://undiscipliningvc.org/html/lesson_plans/seacole_decentering_britishness.html</a>.</p>
 					</section>
 			</main>
 			
