--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -78,8 +78,9 @@
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
 						<li><a href="#overview">Zoomcast Overview</a></li>
-						<li><a href="#series">Positionality Series</a></li>
-						<li><a href="#biography">Developer Biography</a></li>
+						<li><a href="#series">Beyond the Literary Series</a></li>
+						<li><a href="#biography">Guest Biographies</a></li>
+						<li><a href="#reading">Further Reading</a></li>
 						<li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
 					</ol>
 				</section>
