--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -79,7 +79,7 @@
             <ol class="menu">
               <li><a href="#overview">Zoomcast Overview</a></li>
 							<li><a href="#series">Positionality Series</a></li>
-							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#biography">Guest Biography</a></li>
 							<li><a href="#reading">Further Reading</a></li>
               <li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
             </ol>
