--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 					<section>
 						<p class="largest"><strong>Eek! Page not found!</strong></p>
 						<p>Get some help:</p> 
-						<a class="link404" href="/site_map.html">Site Map</a>
+						<a class="link404" href="/sitemap.html">Site Map</a>
 						<p>(Also see the links at top.)</p>
 					</section>
 
