--- a/common/nav.html
+++ b/common/nav.html
@@ -40,7 +40,7 @@
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Email"></i> <span>Email</span></a></li>
 
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="/sitemap.html"><span>Site Map</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="/sitemap.html"><i class="fa fa-directions fa-fw" aria-hidden="true" title="Site Map"></i> <span>Site Map</span></a></li>
 						</ul>
 				</div>
 			</nav>
