--- a/sitemap.html
+++ b/sitemap.html
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="sitemap">
 					<div class="aspect-ratio-box">
-						<h2 id="sitemap">Site Map</h2>
+						<h2 id="sitemap"><i class="fa fa-directions fa-fw" title="Site Map"></i>Site Map</h2>
           	<img loading="" src="/img/about/uvc_0028-1650px.jpg" srcset="/img/about/uvc_0028-1650px.jpg 1650w, /img/about/uvc_0028-1500px.jpg 1500w, /img/about/uvc_0028-1350px.jpg 1350w, /img/about/uvc_0028-1200px.jpg 1200w, /img/about/uvc_0028-1050px.jpg 1050w, /img/about/uvc_0028-900px.jpg 900w, /img/about/uvc_0028-750px.jpg 750w, /img/about/uvc_0028-600px.jpg 600w, /img/about/uvc_0028-450px.jpg 450w, /img/about/uvc_0028-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate pattern with blue, red, and gold elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XLIV, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
