--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<img src="/img/home/uvc_0003-1200px.jpg" srcset="/img/home/uvc_0003-1800px.jpg 1800w, /img/home/uvc_0003-1650px.jpg 1650w, /img/home/uvc_0003-1500px.jpg 1500w, /img/home/uvc_0003-1350px.jpg 1350w, /img/home/uvc_0003-1200px.jpg 1200w, /img/home/uvc_0003-1050px.jpg 1050w, /img/home/uvc_0003-900px.jpg 900w, /img/home/uvc_0003-750px.jpg 750w, /img/home/uvc_0003-600px.jpg 600w, /img/home/uvc_0003-450px.jpg 450w, /img/home/uvc_0003-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#kalighat" id="carousel-label-1">Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail</a></p>
+									<p><a href="#kalighat" id="carousel-label-1">Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s</a></p>
 								</div>
 							</div>
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
