--- a/html/about.html
+++ b/html/about.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>About | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Introduce the founding developers, acknowledges the work of contributors, provides insight into the project's critical thinking, and gathers all bibliographic materials."/>
+		<meta name="description" content="Introduces the founding developers, acknowledges the work of contributors, provides insight into the project's critical thinking, and gathers all bibliographic materials."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
-		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
+		<!-- <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
 		<meta http-equiv="pragma" content="no-cache"/>
-		<meta http-equiv="expires" content="0"/>
+		<meta http-equiv="expires" content="0"/> -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
@@ -55,7 +55,7 @@
 
 				<section aria-labelledby="overview">
 					<h2 id="overview">Overview</h2>
-					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. At present, the section introduces the project's founding developers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gather in one place the various primary and secondary materials cited throughout the site.</p>
+					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. At present, the section introduces the project's founding developers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gathers in one place the various primary and secondary materials cited throughout the site.</p>
 				</section>
 
 				<section aria-labelledby="founders">
