--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
-		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
+		<!-- <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
 		<meta http-equiv="pragma" content="no-cache"/>
-		<meta http-equiv="expires" content="0"/>
+		<meta http-equiv="expires" content="0"/> -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
@@ -55,6 +55,20 @@
           	<img loading="" src="/img/about/uvc_0022-1050px.jpg" srcset="/img/about/uvc_0022-1050px.jpg 1050w, /img/about/uvc_0022-900px.jpg 900w, /img/about/uvc_0022-750px.jpg 750w, /img/about/uvc_0022-600px.jpg 600w, /img/about/uvc_0022-450px.jpg 450w, /img/about/uvc_0022-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue." title="Jones, Owen. “Byzantine No. 3.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XXX, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
+
+					<section aria-labelledby="overview">
+						<h3 id="overview">Overview</h3>
+					</section>
+
+					<section class="menu-container" aria-labelledby="menu">
+						<h3 id="menu">Menu</h3>
+            <ol class="menu">
+              <li><a href="#primary">Primary Materials</a></li>
+							<li><a href="#secondary">Secondary Materials</a></li>
+							<li><a href="#caption">Tile/Header Image Caption</a></li>
+              <li><a href="#citation">Page Citation (MLA)</a></li>
+            </ol>
+          </section>
 
 					<section aria-labelledby="primary">
 						<h3 id="primary">Primary Texts</h3>
