--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
-		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
+		<!-- <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
 		<meta http-equiv="pragma" content="no-cache"/>
-		<meta http-equiv="expires" content="0"/>
+		<meta http-equiv="expires" content="0"/> -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
@@ -52,13 +52,17 @@
 			<main id="main" aria-labelledby="contributors">
 					<div class="aspect-ratio-box">
 						<h2 id="contributors">Project Contributors</h2>
-          	<img loading="" src="/img/about/uvc_0025-900px.jpg" srcset="/img/about/uvc_0025-900px.jpg 900w, /img/about/uvc_0025-750px.jpg 750w, /img/about/uvc_0025-600px.jpg 600w, /img/about/uvc_0025-450px.jpg 450w, /img/about/uvc_0025-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, square pattern with beige, blue, purple, green, and red elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XLIV, https://archive.org/details/grammarornament00Jone. Public domain."/>
+          	<img loading="" src="/img/about/uvc_0023-900px.jpg" srcset="/img/about/uvc_0023-900px.jpg 900w, /img/about/uvc_0023-750px.jpg 750w, /img/about/uvc_0023-600px.jpg 600w, /img/about/uvc_0023-450px.jpg 450w, /img/about/uvc_0023-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Complex flower array with red, blue, white, pink, purple, and yellow flowers." title="Jones, Owen. “Indian No. 4.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LII, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
-					<section>
+					<section aria-labelledby="overview">
+						<h3 id="overview">Overview</h3>
 						<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding developers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
+					</section>
 
+					<section aria-labelledby="contribs">
+						<h3 id="contribs">Contributors</h3>
 						<ul>
 							<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
 							<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
@@ -83,13 +87,9 @@
 					</section>
 
 					<section aria-labelledby="caption">
-						<h3 id="caption">Tile/Header Image Captions</h3>
+						<h3 id="caption">Tile/Header Image Caption</h3>
 
-						<p>(Tile) Owen Jones. “Indian No. 4.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain.</p>
-
-						<p>(Header) Owen Jones. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV. Public domain.</p>
-
-						<p>The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected these images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+						<p>Owen Jones. “Indian No. 4.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
