update z for brice

--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
-		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
+		<!-- <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
 		<meta http-equiv="pragma" content="no-cache"/>
-		<meta http-equiv="expires" content="0"/>
+		<meta http-equiv="expires" content="0"/> -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
@@ -79,8 +79,8 @@
 
 				<section aria-labelledby="literary-2">
 					<h2 id="literary-2">Beyond the Literary #2</h2>
-					<div><a href="/html/zoomcasts/hayward-reeder-brice.html"><img loading="lazy" src="/img/zoomcasts/hayward-reeder-brice-930px.jpg" srcset="/img/zoomcasts/hayward-reeder-brice-1275px.jpg 1275w, /img/zoomcasts/hayward-reeder-brice-930px.jpg 930w, /img/zoomcasts/hayward-reeder-brice-816px.jpg 816w, /img/zoomcasts/hayward-reeder-brice-663px.jpg 663w, /img/zoomcasts/hayward-reeder-brice-532px.jpg 532w, /img/zoomcasts/hayward-reeder-brice-465px.jpg 465w, /img/zoomcasts/hayward-reeder-brice-408px.jpg 408w, /img/zoomcasts/hayward-reeder-brice-266px.jpg 266w" alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice"/><span>Jennifer Hayward, Jessie Reeder, Michelle Prain Brice</span></a></div>
-					<p>Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
+					<div><a href="/html/zoomcasts/brice-hayward-reeder.html"><img loading="lazy" src="/img/zoomcasts/brice-hayward-reeder-930px.jpg" srcset="/img/zoomcasts/brice-hayward-reeder-1275px.jpg 1275w, /img/zoomcasts/brice-hayward-reeder-930px.jpg 930w, /img/zoomcasts/brice-hayward-reeder-816px.jpg 816w, /img/zoomcasts/brice-hayward-reeder-663px.jpg 663w, /img/zoomcasts/brice-hayward-reeder-532px.jpg 532w, /img/zoomcasts/brice-hayward-reeder-465px.jpg 465w, /img/zoomcasts/brice-hayward-reeder-408px.jpg 408w, /img/zoomcasts/brice-hayward-reeder-266px.jpg 266w" alt="Head and shoulders images of Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" title="Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder"/><span>Michelle Prain Brice, Jennifer Hayward, Jessie Reeder</span></a></div>
+					<p>Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
 			</main>
