update lp pages

--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -67,12 +67,12 @@
 							<div>
 								<strong>Lesson Plan Pages:</strong> 
 								<ol>
-									<li><a href="">Undisciplining the Dramatic Monologue</a></li>
-									<li><a href="">Colonial Landscapes and Travel Narratives</a></li>
-									<li><a href="">Southern Africa, 1825-1930</a></li>
-									<li><a href="">Ethiopianism</a></li>
-									<li><a href="">Archival Erasure and the Aftermath of Slavery</a></li>
-									<li><a href="">Slavery and Theories of Sexuality, Desire, and Family</a></li>
+									<li><a href="/html/lesson_plans/africa_dramatic_monologue.html">Undisciplining the Dramatic Monologue</a></li>
+									<li><a href="/html/lesson_plans/africa_colonial_landscapes.html">Colonial Landscapes and Travel Narratives</a></li>
+									<li><a href="/html/lesson_plans/africa_southern_africa.html">Southern Africa, 1820-1930</a></li>
+									<li><a href="/html/lesson_plans/africa_ethiopianism.html">Ethiopianism</a></li>
+									<li><a href="/html/lesson_plans/africa_archival_erasure.html">Archival Erasure and the Aftermath of Slavery</a></li>
+									<li><a href="/html/lesson_plans/africa_slavery_theories.html">Slavery and Theories of Sexuality, Desire, and Family</a></li>
 								</ol>
 							</div>
 						</div>
@@ -81,7 +81,7 @@
 					<aside class="breakout-quote" aria-labelledby="user-guide">
 						<h3 id="user-guide">Lesson Plan User Guide</h3>
 
-						<p>Visitors to this site may find the following lesson plans helpful in revising existing courses or in developing new ones. We designed these lesson plans to be suggestive not exhaustive, and people should feel welcome to use all or part of them as prompts for rethinking their teaching and research on Africa, the African diaspora, and the British empire. If you draw on our lesson plans for your work, including in your own syllabi, please be sure to acknowledge the developers by using the citation information provided at the bottom of each page.</p>
+						<p>Visitors to this site may find the lesson plans in this cluster helpful in revising existing courses or in developing new ones. We designed these lesson plans to be suggestive not exhaustive, and people should feel welcome to use all or part of them as prompts for rethinking their teaching and research on Africa, the African diaspora, and the British empire. If you draw on our lesson plans for your work, including in your own syllabi, please be sure to acknowledge the developers by using the citation information provided at the bottom of each page.</p>
 					</aside>
 
 					<section aria-labelledby="introduction">
@@ -94,7 +94,15 @@
 						
 						<p>As part of that process, we aim to integrate into our Victorian studies courses materials that are not only about and from Africa but also <em>by</em> Africans and the African diaspora. Designing these lesson plans is a start. In formulating them, we asked ourselves a range of questions, such as: What counts as Victorian? According to whom? What are the geographical and temporal boundaries, if any, of the Victorian studies classroom? Why? Who studies and teaches Victorian literature, history, and culture, and who does not? What role does positionality play in that study and teaching?</p>
 						
-						<p>Each lesson plan takes a different approach to answering these questions. The lesson plans on the dramatic monologue and travel narratives start with canonical nineteenth-century British genres to show how pairing them with Black-authored or Africa-centered texts opens up these forms to new avenues of critique. The southern Africa and Ethiopianism lesson plans prove that the empire was messy, unstable, and contested by foregrounding the tensions and connections between and among racial, ethnic, and national groups, and southern Africa’s ever-shifting political landscape. Finally, the lesson plans on archival erasure and sexuality, desire, and family consider how centering slavery in the study of nineteenth-century Britain alters some of the major conceptual and methodological issues of our field. We offer these lesson plans not as experts but as collaborators, with one another and with you.</p>
+						<p>Each lesson plan takes a different approach to answering these questions. The lesson plans on the <a href="/html/lesson_plans/africa_dramatic_monologue.html">dramatic monologue</a> and <a href="/html/lesson_plans/africa_colonial_landscapes.html">travel narratives</a> start with canonical nineteenth-century British genres to show how pairing them with Black-authored or Africa-centered texts opens up these forms to new avenues of critique. The <a href="/html/lesson_plans/africa_southern_africa.html">southern Africa</a> and <a href="/html/lesson_plans/africa_ethiopianism.html">Ethiopianism</a> lesson plans prove that the empire was messy, unstable, and contested by foregrounding the tensions and connections between and among racial, ethnic, and national groups, and southern Africa’s ever-shifting political landscape. Finally, the lesson plans on <a href="/html/lesson_plans/africa_archival_erasure.html">archival erasure</a> and <a href="/html/lesson_plans/africa_slavery_theories.html">sexuality, desire, and family</a> consider how centering slavery in the study of nineteenth-century Britain alters some of the major conceptual and methodological issues of our field. We offer these lesson plans not as experts but as collaborators, with one another and with you.</p>
+					</section>
+
+					<section aria-labelledby="works-cited">
+						<h3 id="works-cited">Works Cited</h3>
+
+						<p>Chatterjee, Ronjaunee, et al. “<a href="https://www.jstor.org/stable/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
+
+						<p>Sharpe, Christina. <em>In the Wake: On Blackness and Being</em>. Duke University Press, 2016.</p>
 					</section>
 
 					<section aria-labelledby="caption">
@@ -105,7 +113,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
+						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
 					</section>
 			</main>
 			
