--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -80,7 +80,7 @@
 					<aside class="breakout-quote" aria-labelledby="user-guide">
 						<h3 id="user-guide">Lesson Plan User Guide</h3>
 
-						<p>Visitors to this site may find the following lesson plans helpful in revising existing courses or in developing new ones. We designed these lesson plans to be suggestive not exhaustive, and people should feel welcome to use all or part of them as prompts for rethinking their teaching and research on Mary Seacole and the Caribbean. If you draw on our lesson plans for your work, including in your own syllabi, please be sure to acknowledge the developers by using the citation information provided at the bottom of each page.</p>
+						<p>Visitors to this site may find the lesson plans in this cluster helpful in revising existing courses or in developing new ones. We designed these lesson plans to be suggestive not exhaustive, and people should feel welcome to use all or part of them as prompts for rethinking their teaching and research on Mary Seacole and the Caribbean. If you draw on our lesson plans for your work, including in your own syllabi, please be sure to acknowledge the developers by using the citation information provided at the bottom of each page.</p>
 					</aside>
 
 					<section aria-labelledby="introduction">
