--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -74,7 +74,7 @@
 						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <li><a href="#goals">Goals, Questions, and Usage</a></li>
-              <li><a href="#materials">Organization and Suggested Materials</a>
+              <li><a href="#materials">Suggested Materials</a>
                 <ol>
                   <li><a href="#materials-1">Primary Materials</a></li>
                   <li><a href="#materials-2">Critical Materials</a></li>
@@ -99,7 +99,7 @@
               <h4 id="materials-1">Primary Materials</h4>
 
 							<p>African Civilization Society. <a href="https://www.blackpast.org/african-american-history/constitution-african-civilization-society-1796/"><em>Constitution of the African Civilization Society</em></a>. 1858.<br/>
-								<span class="annotation">The African Civilization Society was founded by Henry Highland Garnet, an American abolitionist, minister, and former slave, who encouraged Black Americans to emigrate to Africa.</span></p>
+								<span class="annotation">The African Civilization Society was founded by Henry Highland Garnet, an American abolitionist, minister, and former enslaved person, who encouraged Black Americans to emigrate to Africa.</span></p>
 
 							<p>Booth, Joseph. <a href="http://babel.hathitrust.org/cgi/pt?id=ien.35556012349940&view=1up&seq=3"><em>Africa for the African</em></a>. 1897.<br/>
 								<span class="annotation">A white English missionary who spent significant time in New Zealand, Australia, and Africa (and also traveled to the United States), Booth supported African self-rule and urged Black Americans to help bring that about. He directly influenced  John Chilembwe, who organized, and died in, a 1915 rebellion against British colonial rule in Nyasaland (Malawi).</span></p>
@@ -133,7 +133,7 @@
 							<p>Kalu, Ogbu U. “Ethiopianism and the Roots of Modern African Christianity.” <em>World Christianities, c. 1815-1914</em>, Cambridge University Press, 2008, pp. 576–92.<br/>
 								<span class="annotation">Providing religious, political, and social contexts, this relatively short article is a comprehensive overview of Ethiopianism’s “three broad strands: in African-American diasporic experience, West African manifestations and southern African genre. In all incarnations, it fuelled black nationalism” (581).</span></p>
 
-							<p>Wittenberg, Hermann. “Race, Resistance and Translation: The Case of John Buchan’s UPreseter John.” <em>English Studies in Africa</em>, vol. 54, no. 1, 2001, pp. 1–10.<br/>
+							<p>Wittenberg, Hermann. “Race, Resistance and Translation: The Case of John Buchan’s <span class="word">UPrester</span> John.” <em>English Studies in Africa</em>, vol. 54, no. 1, 2001, pp. 1–10.<br/>
 								<span class="annotation">A popular school textbook in Britain and the Commonwealth, <em>Prester John</em> was read by both the colonizer and the colonized. Wittenberg explains that while the novel “fit[] well into a cultural milieu shaped by Rider Haggard, <em>Treasure Island</em>, and the Boy Scouts,” it has also been read as an anti-colonial novel (6). His main focus is the translation of <em>Prester John</em> into Zulu in 1958 as “a complex form of negotiation [between] resistance [and] collaboration” (6).</span></p>
             </section>
 					</section>
@@ -141,7 +141,7 @@
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
 
-						<p><a href="https://english.asu.edu/content/melissa-free">Melissa Free</a> is Assistant Professor of English, Affiliate Faculty in the School of Social Transformation, and Barrett Honors College Faculty at Arizona State University. Her monograph, <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, was published by State University of New York Press in 2021. She is the editor of a Broadview Anthology of British Literature edition, <a href="https://broadviewpress.com/product/the-dead-and-other-stories/#tab-description"><em>The Dead and Other Stories</em></a>, by James Joyce. Her scholarly articles and book chapters have appeared in such places as <a href="https://www.cambridge.org/core/journals/victorian-literature-and-culture/article/settler-colonialism/3BDA9AA967E171B915F4C96FA04077B7"><em>Victorian Literature and Culture</em></a>, <em>Victorian Studies</em>, <em>Genre</em>, and <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-victorian-literary-culture-9780199593736?cc=us&amp;lang=en&amp;"><em>The Oxford Handbook of Victorian Literary Culture</em></a>, edited by Juliet John. Her primary academic interests are Victorian literature and culture, twentieth-century British literature and culture, postcolonial studies, women, gender, and sexuality studies, and genre studies.</p>
+						<p><a href="https://english.asu.edu/content/melissa-free">Melissa Free</a> is Assistant Professor of English, Affiliate Faculty in the School of Social Transformation, and Barrett Honors College Faculty at Arizona State University. Her monograph, <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, was published by State University of New York Press in 2021. She is the editor of a Broadview Anthology of British Literature edition, <a href="https://broadviewpress.com/product/the-dead-and-other-stories/#tab-description"><em>The Dead and Other Stories</em></a>, by James Joyce. Her scholarly articles and book chapters have appeared in such places as <a href="https://www.cambridge.org/core/journals/victorian-literature-and-culture/article/settler-colonialism/3BDA9AA967E171B915F4C96FA04077B7"><em>Victorian Literature and Culture</em></a>, <em>Victorian Studies</em>, <em>Genre</em>, and <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-victorian-literary-culture-9780199593736?cc=us&amp;lang=en&amp;"><em>The Oxford Handbook of Victorian Literary Culture</em></a>, edited by Juliet John. Her primary academic interests are Victorian literature and culture, twentieth-century British literature and culture, postcolonial studies, gender and women's studies, and genre studies.</p>
 					</section>
 
 					<section aria-labelledby="caption">
