--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="lesson-plan">Colonial Landscapes and Travel Narratives</h2>
+						<h2 id="lesson-plan">Colonial Landscapes and Travel Narratives</h2>
           	<img loading="" src="/img/lesson_plans/uvc_0018-1800px.jpg" srcset="/img/lesson_plans/uvc_0018-1800px.jpg 1800w, /img/lesson_plans/uvc_0018-1650px.jpg 1650w, /img/lesson_plans/uvc_0018-1500px.jpg 1500w, /img/lesson_plans/uvc_0018-1350px.jpg 1350w, /img/lesson_plans/uvc_0018-1200px.jpg 1200w, /img/lesson_plans/uvc_0018-1050px.jpg 1050w, /img/lesson_plans/uvc_0018-900px.jpg 900w, /img/lesson_plans/uvc_0018-750px.jpg 750w, /img/lesson_plans/uvc_0018-600px.jpg 600w, /img/lesson_plans/uvc_0018-450px.jpg 450w, /img/lesson_plans/uvc_0018-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Landscape with trees and Zambesi River gorge; water clouds rising from Victoria Falls in background." title="Anonymous. “Bird’s-Eye View of the Great Cataracts of the Zambesi (Called Mosioatunya, or Victoria Falls) and of the Zigzag Chasm below the Falls through Which the River Escapes.” Narrative of an Expedition to the Zambesi and Its Tributaries and of the Discovery of the Lakes Shirwa and Nyassa, 1858-1864, by David Livingstone and Charles Livingstone, John Murray, 1865, frontispiece, https://archive.org/details/b21356853/page/n5/mode/2up. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
