--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -206,9 +206,13 @@
 
 							<p>---. <em>Sense of Place and Sense of Planet: The Environmental Imagination of the Global</em>. Oxford University Press, 2008.</p>
 
+							<p>MacDuffie, Allen, and Aubrey Plourde. “Introduction.” <em>Texas Studies in Literature and Language</em>, vol. 62, no. 2, 2020, pp. 123–27.</p>
+
 							<p>Miller, John. “Postcolonial Ecocriticism and Victorian Studies.” <em>Literature Compass</em>, vol. 9, no. 7, 2012, pp. 476–88.</p>
 
 							<p>Nixon, Rob. “Environmentalism, Postcolonialism, and American Studies.” <em>Slow Violence and the Environmentalism of the Poor</em>, Harvard University Press, 2011, pp. 233–62.</p>
+
+							<p>Taylor, Jesse Oak. “Wilderness After Nature: Conrad, Empire, and the Anthropocene.” <em>Conrad and Nature</em>, edited by Rebozo Lissa Scheider et al., Routledge, 2018, pp. 21–42.</p>
 
 							<p>Voskuil, Lynn. “Victorian Plants: Cosmopolitan and Invasive.” <em>Victorian Literature and Culture</em>, vol. 49, no. 1, 2021, pp. 27–53.</p>
             </section>
