--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -116,7 +116,7 @@
 							
 							<ul>
 								<li>two nineteenth-century poems – one about Seacole and one about Florence Nightingale – that highlight how Seacole’s racialized representation contrasted with the idealized image of white Victorian womanhood;</li>
-								<li>a short piece of historical analysis that discusses the severity of racism in 19th C England;</li>
+								<li>a short piece of historical analysis that discusses the severity of racism in nineteenth-century England;</li>
 								<li>two pieces of literary criticism that provide differing perspectives on how Seacole’s self-representation and assertion of agency aligned with and/or worked against imperialist ideologies; and</li>
 								<li>a critical essay that considers how representations of Seacole’s mixed-race identity are consistently shaped by the conceptual vocabulary and ideological commitments of the reader.</li>
 							</ul>
