add cite link class

--- a/html/about/founding_developers.html
+++ b/html/about/founding_developers.html
@@ -83,7 +83,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>“Founding Developers.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/founding_developers.html">https://undiscipliningvc.org/html/about/founding_developers.html</a>.</p>
+						<p>“Founding Developers.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/founding_developers.html" class="cite-link">https://undiscipliningvc.org/html/about/founding_developers.html</a>.</p>
 					</section>
 			</main>
 			
