--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -94,7 +94,7 @@
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>“Contributors.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/project_contributors.html">https://undiscipliningvc.org/html/about/project_contributors.html</a>.</p>
+						<p>“Contributors.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/project_contributors.html" class="cite-link">https://undiscipliningvc.org/html/about/project_contributors.html</a>.</p>
 					</section>
 			</main>
 			
