--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -197,7 +197,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Sophia Hsu, lesson plan dev. “Archival Erasure and the Aftermath of Slavery.” Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_archival_erasure.html">https://undiscipliningvc.org/html/lesson_plans/africa_archival_erasure.html</a>.</p>
+						<p>Sophia Hsu, lesson plan dev. “Archival Erasure and the Aftermath of Slavery.” Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_archival_erasure.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_archival_erasure.html</a>.</p>
 					</section>
 			</main>
 			
