--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -232,7 +232,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Ji Eun Lee, lesson plan dev. “Colonial Landscapes and Travel Narratives.” Carolyn Betensky, Melissa Free, Cherrie Kwok, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_colonial_landscapes.html">https://undiscipliningvc.org/html/lesson_plans/africa_colonial_landscapes.html</a>.</p>
+						<p>Ji Eun Lee, lesson plan dev. “Colonial Landscapes and Travel Narratives.” Carolyn Betensky, Melissa Free, Cherrie Kwok, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_colonial_landscapes.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_colonial_landscapes.html</a>.</p>
 					</section>
 			</main>
 			
