--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -118,7 +118,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
+						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
 					</section>
 			</main>
 			
