--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 				<section aria-labelledby="citation">
 					<h2 id="citation">Page Citation (MLA)</h2>
-					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/">https://undiscipliningvc.org</a>.</p>
+					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
 				</section>
 
 			</main>
